namespace MovieTicketCsharp.Domain {
    public enum StudentType {
        /// <summary>
        /// 未就学児(3歳以上)
        /// </summary>
        Preschool = 0,
        /// <summary>
        /// 小学生
        /// </summary>
        PrimarySchool,
        /// <summary>
        /// 中学生
        /// </summary>
        MiddleHighSchool,
        /// <summary>
        /// 高校生
        /// </summary>
        HighSchool,
        /// <summary>
        /// 専門学生
        /// </summary>
        VocationalSchool,
        /// <summary>
        /// 大学生
        /// </summary>
        University
    }
}
