namespace MovieTicketCsharp.ValueObject {
    public interface IValueObject {
        
    }
}
